<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">NoGymMembership</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="welcome_message" translatable="false">Try to start training in the street avoiding to pay for a gym membership!</string>
    <string name="set_data" translatable="false">Please set your athlete profile:</string>
    <string name="set_weight" translatable="false">Weight:</string>
    <string name="set_height" translatable="false">Height:</string>
    <string name="set_gender" translatable="false">Gender:</string>
    <string name="set_level" translatable="false">Level:</string>
    <string name="genderMale" translatable="false">Male</string>
    <string name="genderFemale" translatable="false">Female</string>
    <string name="levelBeginner" translatable="false">Beginner</string>
    <string name="levelMedium" translatable="false">Medium</string>
    <string name="levelProfesional" translatable="false">Profesional</string>
    <string name="startRoutines" translatable="false">Enter</string>
    <string name="title_activity_routines_acivity" translatable="false">RoutinesAcivity</string>
    <string name="title_activity_nav_drawer">Routines</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_fragment_one">LIST OF ROUTINES</string>
    <string name="title_fragment_two">CREATE ROUTINE</string>
    <string name="nightmode">Night Mode</string>
    <string name="nightmode_sum">Activate the night mode to dim the screen</string>
    <string name="username">Change User Name</string>
    <string name="string_name">Name: </string>
    <string name="string_type">Type: </string>
    <string-array name="routine_types">
        <item>Pull</item>
        <item>Push</item>
        <item>Legs</item>
        <item>Core</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="One_hello_blank_fragment">One: Routines List</string>
    <string name="Two_hello_blank_fragment">Two: Create a routine</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_enter_name">Enter name...</string>
    <string name="string_enter_type">pull, push, legs, etc</string>
    <string name="load_data_string">Load Data</string>
    <string name="action_preferences">Preferences</string>
    <string name="done">Done!</string>
    <string name="defaultValues">NOTE: By default the weight and height values will be setted as 70 kg and 175 cm</string>
    <string name="defaultWeight">70</string>
    <string name="defaultHeight">175</string>
    <string name="title_activity_exercise_desc">Exercise description</string>
    <string name="title_activity_add_exercise_to_routine">Choose a routine to add</string>
    <string name="routine_prompt">Choose a type</string>
    <string name="search_title">Search</string>
    <string name="refreshButton">Refresh</string>
    <string name="setsIndicator">Sets :</string>
    <string name="repsIndicator">Reps :</string>
</resources>
